src/objects/MUSW__Master_Valuation_List__c.object
<CustomObject>
    <description>Master control table to determine which Class, Construction Type and Use Type, etc values will set building square foot Valuation field outcomes via DRE rules. Can be used to allow non-admin users with appropriate permissions to edit their own criteria and outcome values.</description>
    <fields>
        <fullName>Code_Book__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Book</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Edition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Code Edition</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IA__c</fullName>
        <label>IA</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IB__c</fullName>
        <label>IB</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IIA__c</fullName>
        <label>IIA</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IIB__c</fullName>
        <label>IIB</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IIIA__c</fullName>
        <label>IIIA</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IIIB__c</fullName>
        <label>IIIB</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IV__c</fullName>
        <label>IV</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Use_Group__c</fullName>
        <label>Use Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A-1 Assembly, theaters, without stage</fullName>
                    <default>true</default>
                    <label>A-1 Assembly, theaters, without stage</label>
                </value>
                <value>
                    <fullName>A-1 Assembly, theaters, with stage</fullName>
                </value>
                <value>
                    <fullName>A-2 Assembly, nightclubs</fullName>
                </value>
                <value>
                    <fullName>A-2 Assembly, restaurants, bars, banquet halls</fullName>
                </value>
                <value>
                    <fullName>A-3 Assembly, churches</fullName>
                </value>
                <value>
                    <fullName>A-3 Assembly, general, community halls, libraries, museums</fullName>
                </value>
                <value>
                    <fullName>A-4 Assembly, arenas</fullName>
                </value>
                <value>
                    <fullName>B Business</fullName>
                </value>
                <value>
                    <fullName>E Educational</fullName>
                </value>
                <value>
                    <fullName>F-1 Factory and industrial, moderate hazard</fullName>
                </value>
                <value>
                    <fullName>F-2 Factory and industrial, low hazard</fullName>
                </value>
                <value>
                    <fullName>H-1 High Hazard, explosives</fullName>
                </value>
                <value>
                    <fullName>H234 High Hazard</fullName>
                </value>
                <value>
                    <fullName>H-5 HPM</fullName>
                </value>
                <value>
                    <fullName>I-1 Institutional, supervised environment</fullName>
                </value>
                <value>
                    <fullName>I-2 Institutional, hospitals</fullName>
                </value>
                <value>
                    <fullName>I-2 Institutional, nursing homes</fullName>
                </value>
                <value>
                    <fullName>I-3 Institutional, restrained</fullName>
                </value>
                <value>
                    <fullName>I-4 Institutional, day care facilities</fullName>
                </value>
                <value>
                    <fullName>M Mercantile</fullName>
                </value>
                <value>
                    <fullName>R-1 Residential, hotels</fullName>
                </value>
                <value>
                    <fullName>R-2 Residential, multiple family</fullName>
                </value>
                <value>
                    <fullName>R-3 Residential, one- and two-family</fullName>
                </value>
                <value>
                    <fullName>R-4 Residential, care/assisted living facilities</fullName>
                </value>
                <value>
                    <fullName>S-1 Storage, moderate hazard</fullName>
                </value>
                <value>
                    <fullName>S-2 Storage, low hazard</fullName>
                </value>
                <value>
                    <fullName>U Utility, miscellaneous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VA__c</fullName>
        <label>VA</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VB__c</fullName>
        <label>VB</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Master Valuation List</label>
    <listViews>
        <fullName>MA_Commercial_Code_10th</fullName>
        <columns>Use_Group__c</columns>
        <columns>IA__c</columns>
        <columns>IB__c</columns>
        <columns>IIA__c</columns>
        <columns>IIB__c</columns>
        <columns>IIIA__c</columns>
        <columns>IIIB__c</columns>
        <columns>IV__c</columns>
        <columns>VA__c</columns>
        <columns>VB__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Book__c</field>
            <operation>equals</operation>
            <value>MA Commercial Code</value>
        </filters>
        <filters>
            <field>Code_Edition__c</field>
            <operation>equals</operation>
            <value>10th</value>
        </filters>
        <label>MA Commercial Code - 10th</label>
    </listViews>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Master Valuation List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Valuation Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>